fix padding issues for the first block and sync carousel-column horizontal whitespace

--- a/src/containers/PageBuilder/Primitives/Heading/Heading.module.css
+++ b/src/containers/PageBuilder/Primitives/Heading/Heading.module.css
@@ -57,29 +57,13 @@
 
 .h3 {
   font-size: 24px;
-
-  /* If ´& + *´ if used, margin-top needs !important to overwrite */
-  /* Handle margin-top of next adjacent element against this heading element */
-  & + p,
-  & + a,
-  & + ul,
-  & + ol,
-  & + code,
-  & + div,
-  & + h1,
-  & + h2,
-  & + h3,
-  & + h4,
-  & + h5,
-  & + h6 {
-    margin-top: 8px;
-  }
 }
 
 .h4 {
   font-size: 21px;
 }
 
+.h3,
 .h4,
 .h5,
 .h6 {
