--- a/src/containers/PageBuilder/Primitives/YoutubeEmbed/YoutubeEmbed.module.css
+++ b/src/containers/PageBuilder/Primitives/YoutubeEmbed/YoutubeEmbed.module.css
@@ -1,5 +1,7 @@
 .video {
   position: relative;
+  overflow: hidden;
+  border-radius: 8px;
 }
 .iframe {
   position: absolute;
